# RH_Hume_Project

./: .gitignore  Makefile  README.md  hume_gh_pat.odt  pyproject.toml
config/: default.yaml  development.yaml  logging.yaml  production.yaml
docker/: .env.example  Dockerfile.api  Dockerfile.consumers  Dockerfile.jobs  docker-compose.yml
docs/architecture/: overview.md
docs/guides/: development.md  getting_started.md
docs/playbooks/: il5_compliance.md  velocity_scaling.md
jobs/: __init__.py  aggregation.py  embedding_generator.py  etl_pipeline.py  hume_processor.py  narrative_generator.py  neo4j_loader_job.py  qlik_presentation.py  runner.py  snapshot_loader.py  synthetic_data.py
qlik/scripts/: load_script.qvs
scripts/: reset_demo.sh  verify_env.sh
src/: __init__.py
src/agent/: __init__.py  guardrails.py  react_agent.py
src/agent/tools/: __init__.py  alert_tools.py  asset_tools.py  base.py  cypher_tools.py  emotional_tools.py  facility_tools.py  inventory_tools.py  report_tools.py  route_tools.py
src/api/: main.py
src/api/routes/: chat.py  health.py  narratives.py
src/config/: __init__.py  loader.py
src/integrations/: __init__.py  claude_client.py  embedding_client.py  hume_client.py
src/kafka/: __init__.py  base.py  consumers.py  init_topics.py  producers.py  run_consumers.py
src/loaders/: __init__.py  init_neo4j.py  neo4j_loader.py
src/models/: __init__.py  entities.py
src/processing/: delta_engine.py
tests/: __init__.py  conftest.py
tests/golden/: __init__.py  test_agent_golden.py  test_cases.yaml  test_runner.py
tests/integration/: test_hume_client.py
tests/unit/: test_config.py  test_models.py
